# project2

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy.py  pyproject.toml  requirements-gpu.txt  run.sh  vcr_env.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
analysis/: .gitkeep  make_heatmap.py
analysis/demos/: .gitkeep
analysis/runs/: phase1_A_seed0.csv  phase1_A_seed0.json  phase2_collapse.csv  phase4_recovery.csv  phase5_summary.json  phase5_summary.md
configs/: spatial_episodes.json
configs/eval/: default.yaml
configs/lora/: condition_c_aug.yaml  condition_c_realdata.yaml  smolvla_r16.yaml
configs/model/: pi05.yaml  smolvla.yaml
configs/perturb/: libero_plus.yaml  libero_pro.yaml
data/: prepare_libero_subset.py
data/augment/: __init__.py  visual_aug.py
docs/: EVALUATION.md  LIBERO_PLUS_NOTES.md  PROBES.md  REPRODUCING.md  RESULTS.md
eval/: __init__.py  bootstrap.py  budget.py  holm.py  lerobot_runner.py  metrics.py  paired.py  phase2_collapse.py  phase4_recovery.py  phase5_stats.py  probe.py  record_demo.py  run_noise_pertask.py  run_rollout.py
eval/runners/: __init__.py  lerobot_runner.py  phase2_collapse.py  phase4_recovery.py  phase5_stats.py
eval/stats/: __init__.py  bootstrap.py  holm.py  paired.py  report.py
perturb/: __init__.py  libero_plus_constants.py  libero_plus_wrapper.py
report/: case_study.md  one_pager.md  results_card.md  resume_bullets.md  tech_report.tex  technical_report.md
scripts/: __init__.py  analyze_results.py  estimate_budget.py  smoke_clean.sh  smoke_timing.py  verify_env.py
tests/: test_analyze.py  test_augment_subset.py  test_budget.py  test_libero_plus.py  test_metrics.py  test_perturb_spec.py  test_probe.py  test_run_rollout.py  test_smoke.py  test_stats.py
tests/fixtures/: rollout_probe_sample.csv  rollout_sample.csv  task_classification.json
train/: __init__.py  feature_mod.py  train_lora.py
