[project]
name = "vla-collapse-recover"
version = "0.0.1"
description = "VLA-Collapse-Recover: a reproducible empirical study of visual-perturbation robustness in open Vision-Language-Action models (collapse -> recovery via perturbation-augmented LoRA)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

# --- Lightweight CORE deps ---------------------------------------------------
# Installable OFF-GPU (no rental). Enough for: scaffolding, augmentation-magnitude
# bookkeeping, the statistics modules, analysis/plots, and the full off-GPU smoke tests.
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
# --- GPU stack (PyPI-resolvable parts) ---------------------------------------
# Install ONLY on the rented RTX 5090 (Blackwell, sm_120):   uv sync --extra gpu
# torch / torchvision are NOT here: they need the cu128 index (not a normal PyPI source),
# so they are pinned in `requirements-gpu.txt` and installed separately (see README):
#   uv pip install --index-url https://download.pytorch.org/whl/cu128 -r requirements-gpu.txt
# Requires CUDA 12.8 (cu128) + PyTorch >= 2.7 (first stable with native sm_120). No CUDA 13.x.
# Prefer the official pytorch/pytorch:2.x-cuda12.8-cudnn9 image; avoid runtime JIT of custom
# CUDA kernels (Blackwell PTX JIT has a known missing-lib issue) -- use AOT wheels.
gpu = [
  "transformers>=4.44",
  "huggingface-hub>=0.24",
  "peft>=0.11",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
]
# NOTE: LeRobot (SmolVLA / pi0.5) and LIBERO-Plus are installed from source on the rental,
# not from PyPI (fast-moving), so they are documented in the README instead of pinned here:
#   pip install "lerobot[smolvla] @ git+https://github.com/huggingface/lerobot"
#   pip install -e third_party/LIBERO-Plus   # drop-in replacement for `libero`

[dependency-groups]
# Installed by default with `uv sync` (off-GPU dev tooling).
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.uv]
package = false          # script-based research repo; do not build/install the project itself
# We only ever run on Linux (the rented RTX 5090 + CI/dev containers).
environments = ["sys_platform == 'linux'"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
